--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../stylesheets/styles.css">
 
-    <title>SEASONING</title>
+    <title>seasoning</title>
   </head>
   <body class="background">
     <div class="container">
@@ -17,13 +17,13 @@
           <a class="navbar-brand" href="../index.html">
               <h2 class="title">seasoning</h2>
           </a>
-          <div class="collapse navbar-collapse justify-content-end">
+          <div class="justify-content-end">
               <ul class="nav nav-pills align-items-center">
                   <li class="nav-item">
-                      <a class="nav-link" href="about/index.html">about</a>
+                      <a class="nav-link" href="#">about</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="contact/index.html">contact</a>
+                      <a class="nav-link" href="../contact/index.html">contact</a>
                   </li>
               </ul>
           </div>
