--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
       </div>
   </nav>
 
+
   <section>
-  <div>
     <p class="text-center test"> SEASONING </p>
-  </div>
   </section>
 
     <section id="vertical" class="my-5">
@@ -48,13 +47,13 @@
             </div>
         </div>
         <div class="row my-5">
-            <div class="col col-md-4" data-paroller-factor="0.9" data-paroller-type="foreground"
+            <div class="col col-md-4" data-paroller-factor="0.2" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/33.jpg">
+                 <img class="img-thumbnail" src="assets/44.jpg">
             </div>
             <div class="col col-md-4" data-paroller-factor="0.15" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/11.jpg">
+                 <img class="img-thumbnail" src="assets/55.jpg">
             </div>
             <div class="col col-md-4" data-paroller-factor="-0.1" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
@@ -64,11 +63,15 @@
         <div class="row my-5">
             <div class="col col-sm-6" data-paroller-factor="0.1" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/11.jpg">
+                 <img class="img-thumbnail" src="assets/66.jpg">
             </div>
-            <div class="col col-sm-6" data-paroller-factor="-0.1" data-paroller-type="foreground"
+            <div class="col col-sm-6" data-paroller-factor=".15" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/22.jpg">
+            </div>
+            <div class="col col-md-4" data-paroller-factor="-0.1" data-paroller-type="foreground"
+                 data-paroller-direction="vertical">
+                 <img class="img-thumbnail" src="assets/55.jpg">
             </div>
         </div>
     </section>
