--- a/about/index.html
+++ b/about/index.html
@@ -15,15 +15,15 @@
     <div class="container">
       <nav class="navbar sticky-top navbar-toggleable-md" id="main-navbar">
           <a class="navbar-brand" href="../index.html">
-              <h2 class="title">seasoning</h2>
+              <h2 class="title navs">seasoning</h2>
           </a>
           <div class="justify-content-end">
               <ul class="nav nav-pills align-items-center">
                   <li class="nav-item">
-                      <a class="nav-link" href="#">about</a>
+                      <a class="nav-link navs" href="#">about</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../contact/index.html">contact</a>
+                      <a class="nav-link navs" href="../contact/index.html">contact</a>
                   </li>
               </ul>
           </div>
@@ -33,8 +33,8 @@
     <br>
     <div class="row align-items-center">
       <div class="col">
-      <h4 class="text-center"> Seasoning is an exploration of food and space design. </h4>
-      <h4 class="text-center"> Summer Solstice is based on our relationship to the sun, our return to the natural environment, our return to self. </h4>
+      <h4 class="text-center text"> Seasoning is an exploration of food and space design. </h4>
+      <h4 class="text-center text"> Summer Solstice is based on our relationship to the sun, our return to the natural environment, our return to self. </h4>
       </div>
     </div>
 
