--- a/contact/index.html
+++ b/contact/index.html
@@ -15,15 +15,15 @@
     <div class="container">
       <nav class="navbar sticky-top navbar-toggleable-md" id="main-navbar">
           <a class="navbar-brand" href="../index.html">
-              <h2 class="title">seasoning</h2>
+              <h2 class="title navs">seasoning</h2>
           </a>
           <div class="justify-content-end">
               <ul class="nav nav-pills align-items-center">
                   <li class="nav-item">
-                      <a class="nav-link" href="../about/index.html">about</a>
+                      <a class="nav-link navs" href="../about/index.html">about</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">contact</a>
+                      <a class="nav-link navs" href="#">contact</a>
                   </li>
               </ul>
           </div>
@@ -31,15 +31,9 @@
 
     <br>
     <div class="row">
-      <div class="col">
-        <h2 class="text-center">16-80 Madison St. 2nd Floor Terrace Ridgewood, NY 11385 </h2>
-        <h2 class="text-center">Saturday, June 22, 2019 1pm-7pm </h2>
-        <h2 class="text-center">RSVP by Saturday, June 8, 2019 </h2>
-        <h2 class="text-center">info@seasoningnyc.com </h2>
+      <div class="col text-center">
+        <h2><A HREF="mailto:hello@seasoning.studio">hello@seasoning.studio</A></h2>
       </div>
-      <div class="col">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.854228559739!2d-73.91080968459539!3d40.69920797933337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25c23c5b47ff1%3A0xacb37c1910e5ae1!2sThe+Mill!5e0!3m2!1sen!2sus!4v1559706860355!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-      <div>
     </div>
 
 
