--- a/index.html
+++ b/index.html
@@ -14,27 +14,31 @@
 <div class="container">
   <nav class="navbar sticky-top navbar-toggleable-md" id="main-navbar">
       <a class="navbar-brand" href="#">
-          <h2 class="title">seasoning</h2>
+          <h2 class="title navs">seasoning</h2>
       </a>
       <div class="collapse navbar-collapse justify-content-end">
           <ul class="nav nav-pills align-items-center">
               <li class="nav-item">
-                  <a class="nav-link" href="about/index.html">about</a>
+                  <a class="nav-link navs" href="about/index.html">about</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="contact/index.html">contact</a>
+                  <a class="nav-link navs" href="contact/index.html">contact</a>
               </li>
           </ul>
       </div>
   </nav>
 
 
-  <section>
+  <section class="h-100">
     <p class="text-center test"> SEASONING </p>
+    <div class="row">
+      <div class="col">
+      </div>
+    </div>
   </section>
 
-    <section id="vertical" class="my-5">
 
+    <section id="vertical" class="my-5">
         <div class="row my-5">
             <div class="col col-md-4 paroller">
                 <img class="img-thumbnail" src="assets/11.jpg">
