--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
   </nav>
 
 
-  <section class="h-100">
+  <section>
     <p class="text-center test"> SEASONING </p>
-    <div class="row">
-      <div class="col">
-      </div>
-    </div>
   </section>
 
 
@@ -72,10 +68,6 @@
             <div class="col col-sm-6" data-paroller-factor=".15" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/22.jpg">
-            </div>
-            <div class="col col-md-4" data-paroller-factor="-0.1" data-paroller-type="foreground"
-                 data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/55.jpg">
             </div>
         </div>
     </section>
