photo switch out

--- a/index.html
+++ b/index.html
@@ -28,42 +28,36 @@
       </div>
   </nav>
 
-
-  <section>
-    <p class="text-center test"> SEASONING </p>
-  </section>
-
-
-    <section id="vertical" class="my-5">
+    <section id="vertical">
         <div class="row my-5">
-            <div class="col col-md-4 paroller">
+            <div class="col paroller">
                 <img class="img-thumbnail" src="assets/11.jpg">
             </div>
-            <div class="col col-md-4" data-paroller-factor="0.1" data-paroller-type="foreground">
+            <div class="col" data-paroller-factor="0.1" data-paroller-type="foreground">
               <img class="img-thumbnail" src="assets/22.jpg">
             </div>
-            <div class="col col-md-4" data-paroller-factor="-0.4" data-paroller-type="foreground">
+            <div class="col" data-paroller-factor="-0.4" data-paroller-type="foreground">
               <img class="img-thumbnail" src="assets/33.jpg">
             </div>
         </div>
         <div class="row my-5">
-            <div class="col col-md-4" data-paroller-factor="0.2" data-paroller-type="foreground"
+            <div class="col" data-paroller-factor="0.2" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/44.jpg">
             </div>
-            <div class="col col-md-4" data-paroller-factor="0.15" data-paroller-type="foreground"
+            <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/55.jpg">
             </div>
-            <div class="col col-md-4" data-paroller-factor="-0.1" data-paroller-type="foreground"
+            <div class="col" data-paroller-factor="-0.1" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/33.jpg">
+                 <img class="img-thumbnail" src="assets/11.jpg">
             </div>
         </div>
         <div class="row my-5">
             <div class="col col-sm-6" data-paroller-factor="0.1" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/66.jpg">
+                 <img class="img-thumbnail" src="assets/22.jpg">
             </div>
             <div class="col col-sm-6" data-paroller-factor=".15" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
