--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body class="background">
 <div class="container">
-  <nav class="navbar sticky-top navbar-toggleable-md" id="main-navbar">
+
+  <nav class="navbar sticky-top navbar-toggleable-md" style="margin-bottom:25px;" id="main-navbar">
       <a class="navbar-brand" href="#">
           <h2 class="title navs">seasoning</h2>
       </a>
@@ -29,39 +30,40 @@
   </nav>
 
     <section id="vertical">
-        <div class="row my-5">
-            <div class="col paroller">
-                <img class="img-thumbnail" src="assets/11.jpg">
-            </div>
-            <div class="col" data-paroller-factor="0.1" data-paroller-type="foreground">
-              <img class="img-thumbnail" src="assets/22.jpg">
-            </div>
-            <div class="col" data-paroller-factor="-0.4" data-paroller-type="foreground">
-              <img class="img-thumbnail" src="assets/33.jpg">
-            </div>
-        </div>
-        <div class="row my-5">
-            <div class="col" data-paroller-factor="0.2" data-paroller-type="foreground"
+        <div class="row" style="margin-bottom:2px;">
+            <div class="col" style="padding:2px;" data-paroller-factor="0.1" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/44.jpg">
             </div>
-            <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
+            <div class="col" style="padding-right: 28px;" data-paroller-factor="-0.8" data-paroller-type="foreground"
+                 data-paroller-direction="vertical">
+                 <img class="img-thumbnail" src="assets/22.jpg">
+            </div>
+        </div>
+        <div class="row" style="margin-bottom:2px;">
+            <div class="col paroller" style="padding:15px;">
+                <img class="img-thumbnail" src="assets/11.jpg">
+            </div>
+            <div class="col" style="padding:2px;" data-paroller-factor="-0.4" data-paroller-type="foreground">
+              <img class="img-thumbnail" src="assets/33.jpg">
+            </div>
+            <div class="col" style="padding:25px;" data-paroller-factor="0.15" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/55.jpg">
             </div>
-            <div class="col" data-paroller-factor="-0.1" data-paroller-type="foreground"
+        </div>
+        <div class="row" style="margin-bottom:2px;">
+            <div class="col" style="padding:2px;" data-paroller-factor="0.2" data-paroller-type="foreground"
+                 data-paroller-direction="vertical">
+                 <img class="img-thumbnail" src="assets/44.jpg">
+            </div>
+            <div class="col" style="padding:2px;" data-paroller-factor="0.15" data-paroller-type="foreground"
+                 data-paroller-direction="vertical">
+                 <img class="img-thumbnail" src="assets/55.jpg">
+            </div>
+            <div class="col" style="padding:2px;" data-paroller-factor="-0.1" data-paroller-type="foreground"
                  data-paroller-direction="vertical">
                  <img class="img-thumbnail" src="assets/11.jpg">
-            </div>
-        </div>
-        <div class="row my-5">
-            <div class="col col-sm-6" data-paroller-factor="0.1" data-paroller-type="foreground"
-                 data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/22.jpg">
-            </div>
-            <div class="col col-sm-6" data-paroller-factor=".15" data-paroller-type="foreground"
-                 data-paroller-direction="vertical">
-                 <img class="img-thumbnail" src="assets/22.jpg">
             </div>
         </div>
     </section>
