--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                                data-paroller-direction="vertical">
                                <img class="img-thumbnail" src="assets/88.jpg">
                           </div>
-                          <div style="height: 50vh;">   
-              
+                          <div style="height: 50vh;">
+
                           </div>
                       </div>
                 </section>
                       <section>
-                      <div style="height: 100vh; padding: 7em; text-align: center;">   
-                        <button class="btn btn-link" type="button" data-toggle="modal" data-target="#exampleModal"> 
+                      <div style="height: 100vh; padding: 7em; text-align: center;">
+                        <button class="btn btn-link" type="button" data-toggle="modal" data-target="#exampleModal">
                             <h3 style="text-align: center;">S E A S O N I N G</h3>
                         </button>
 
@@ -88,7 +88,7 @@
                             </div>
                             <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <a href="https://www.google.com/">
+                            <a href="https://www.google.com/" target="_blank">
                             <button type="button" class="btn btn-info">Purchase Tickets</button>  </a>
                             </div>
                         </div>
