--- a/index.html
+++ b/index.html
@@ -12,73 +12,69 @@
 
 <body class="background">
         <div class="container">
-              <section>
-                    <nav class="navbar sticky-top navbar-toggleable-md" style="" id="main-navbar">
-                            <a class="navbar-brand" href="#">
-                                <h2 class="title navs">seasoning</h2>
-                            </a>
-                            <div class="collapse navbar-collapse justify-content-end">
-                                <ul class="nav nav-pills align-items-center">
-                                    <li class="nav-item">
-                                        <a class="nav-link navs" href="about/index.html">about</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link navs" href="contact/index.html">contact</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
+          <nav class="navbar sticky-top navbar-toggleable-md" style="" id="main-navbar">
+                  <a class="navbar-brand" href="#">
+                      <h2 class="title navs">seasoning</h2>
+                  </a>
+                  <div class="collapse navbar-collapse justify-content-end">
+                      <ul class="nav nav-pills align-items-center">
+                          <li class="nav-item">
+                              <a class="nav-link navs" href="about/index.html">about</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link navs" href="contact/index.html">contact</a>
+                          </li>
+                      </ul>
+                  </div>
+              </nav>
+              <section style="height: 152vh">
                       <div class="row" style="margin-bottom:2px;">
-                          <div class="col" style="padding:2px;" data-paroller-factor="0.1" data-paroller-type="foreground"
+                          <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
                                <img class="img-thumbnail" src="assets/11.jpg">
                           </div>
-                          <div class="col" style="padding-right: 28px;" data-paroller-factor="-0.3" data-paroller-type="foreground"
+                          <div class="col" data-paroller-factor="-0.3" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
                                <img class="img-thumbnail" src="assets/22.jpg">
                           </div>
                       </div>
                       <div class="row" style="margin-bottom:2px;">
-                          <div class="col paroller" style="padding:15px;">
+                          <div class="col paroller">
                               <img class="img-thumbnail" src="assets/33.jpg">
                           </div>
-                          <div class="col" style="padding:2px;" data-paroller-factor="-0.2" data-paroller-type="foreground">
+                          <div class="col" data-paroller-factor="-0.2" data-paroller-type="foreground">
                             <img class="img-thumbnail" src="assets/44.jpg">
                           </div>
-                          <div class="col" style="padding:25px;" data-paroller-factor="0.15" data-paroller-type="foreground"
+                          <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
                                <img class="img-thumbnail" src="assets/55.jpg">
                           </div>
                       </div>
                       <div class="row" style="margin-bottom:2px;">
-                          <div class="col" style="padding:2px;" data-paroller-factor="0.2" data-paroller-type="foreground"
+                          <div class="col" data-paroller-factor="0.2" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
                                <img class="img-thumbnail" src="assets/66.jpg">
                           </div>
-                          <div class="col" style="padding:2px;" data-paroller-factor="0.15" data-paroller-type="foreground"
+                          <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
                                <img class="img-thumbnail" src="assets/77.jpg">
                           </div>
-                          <div class="col" style="padding:2px;" data-paroller-factor="-0.1" data-paroller-type="foreground"
-                               data-paroller-direction="vertical">
+                          <div class="col paroller">
                                <img class="img-thumbnail" src="assets/88.jpg">
-                          </div>
-                          <div style="height: 50vh;">
-
                           </div>
                       </div>
                 </section>
                       <section>
                       <div style="height: 100vh; padding: 7em; text-align: center;">
                         <button class="btn btn-link" type="button" data-toggle="modal" data-target="#exampleModal">
-                            <h3 style="text-align: center;">S E A S O N I N G</h3>
+                            <p class="bang">seasoning</p>
                         </button>
 
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">MOCK EVENT</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">MOCK SEASONING EVENT</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
