--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                       </ul>
                   </div>
               </nav>
-              <section style="height: 152vh">
+              <section style="height: 205vh">
                       <div class="row" style="margin-bottom:2px;">
                           <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
@@ -53,14 +53,24 @@
                       <div class="row" style="margin-bottom:2px;">
                           <div class="col" data-paroller-factor="0.2" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
-                               <img class="img-thumbnail" src="assets/66.jpg">
+                               <img class="img-thumbnail" src="assets/66.JPG">
                           </div>
                           <div class="col" data-paroller-factor="0.15" data-paroller-type="foreground"
                                data-paroller-direction="vertical">
-                               <img class="img-thumbnail" src="assets/77.jpg">
+                               <img class="img-thumbnail" src="assets/77.JPG">
+                          </div>
+                      </div>
+                      <div class="row" style="margin-bottom:2px;">
+                          <div class="col paroller" data-paroller-factor="0.2" data-paroller-type="foreground"
+                               data-paroller-direction="vertical">
+                               <img class="img-thumbnail" src="assets/88.JPG">
+                          </div>
+                          <div class="col paroller" data-paroller-factor="0.15" data-paroller-type="foreground"
+                               data-paroller-direction="vertical">
+                               <img class="img-thumbnail" src="assets/99.JPG">
                           </div>
                           <div class="col paroller">
-                               <img class="img-thumbnail" src="assets/88.jpg">
+                               <img class="img-thumbnail" src="assets/1010.JPG">
                           </div>
                       </div>
                 </section>
